candle-einops-macros/tests/ui/fail/missing-axis-size.stderr
error: New axis `b` requires an explicit size
 --> tests/ui/fail/missing-axis-size.rs:4:21
  |
4 |     let _ = einops!("a -> a b", ());
  |                     ^^^^^^^^^^
